--- a/src/mail/templates/confirmation-email.hbs
+++ b/src/mail/templates/confirmation-email.hbs
@@ -1,5 +1,7 @@
-<p>Посилання на активацію електронної пошти:</p>
+<p>Привіт!</p>
+<p>Вітаємо на платформі JunChirp! Щоб завершити реєстрацію, просто натисни на посилання нижче для підтвердження твоєї електронної пошти:</p>
 <p>{{ url }}</p>
-<p>Для активації електронної пошти перейдіть за цим посиланням.</p>
-<p>Термін дії посилання - 24 години. Після генерації нового посилання попереднє стає недійсним.</p>
-<p>Якщо ви не робили запит на активацію електронної пошти, просто проігноруйте це повідомлення.</p>
+<p>Це посилання дійсне протягом 24 годин. Якщо ти не запитував реєстрацію або виникли проблеми з його використанням, будь ласка, звернись до нашої підтримки.</p>
+<p>Дякуємо за реєстрацію! Ми раді бачити тебе в нашій спільноті.</p>
+<p>З найкращими побажаннями,</p>
+<p>Команда JunChirp!</p>
